# mystica-onmisend-bridge

./: .env.example  .gitignore  BUILD_PLAN.md  DEPLOY.md  EXECUTION_PLAN.md  FINDINGS.md  OPERATIONS.md  README.md  TAG_TAXONOMY.md  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt
src/bridge/: __init__.py  apply.py  cli.py  config.py  desired.py  identity.py  models.py  omnisend.py  pipeline.py  plan.py  posthog.py  render_db.py  report.py  slack.py
tests/: conftest.py  test_apply.py  test_desired.py  test_identity.py  test_omnisend.py  test_pipeline.py  test_plan.py  test_posthog.py  test_render_db.py
